--- a/src/main/resources/templates/personal_shelter.html
+++ b/src/main/resources/templates/personal_shelter.html
@@ -119,14 +119,21 @@
         <div class="row p-3 m-auto ftco-animate text-center justify-content-center" id="top">
             <div class="p-1">
                 <select class="custom-select" name="area" id="area">
+                    <option value="default">不限地區</option>
                 </select>
             </div>
             <div class="p-1">
                 <select class="custom-select" name="kind" id="kind">
+                    <option value="default">不限種類</option>
+                    <option value="狗">狗</option>
+                    <option value="貓">貓</option>
                 </select>
             </div>
             <div class="p-1">
                 <select class="custom-select" name="sex" id="sex">
+                    <option value="default">不限性別</option>
+                    <option value="公">公</option>
+                    <option value="母">母</option>
                 </select>
             </div>
             <div class="p-1">
@@ -137,7 +144,7 @@
         <!-- 顯示資料內容 -->
         <div class="row ftco-animate">
             <div class="col-12 p-3">
-                <div class="row" id="test1Result">
+                <div class="row" id="contentAjax">
                 </div>
             </div>
         </div>
@@ -329,56 +336,57 @@
         }
     });
 
-    $.ajax({//載入下拉選單
+    // 載入篩選區下拉選單
+    $.ajax({
         type: "GET",
-        url: "/getPersonalAnimalsComboBox",
+        url: "/personalAnimals?limit=1000",
         success: function (data) {
-            console.log(data);
-            console.log(data[0]);
-            console.log(data[1]);
-
-            $("#area").append("<option value='不限地區'>不限地區</option>");
-            $("#kind").append("<option value='不限種類'>不限種類</option>");
-            $("#sex").append("<option value='不限性別'>不限性別</option>");
-
-            $.each(data[0], function (index, item) {
-                $("#area").append("<option value='" + item + "'>" + item + "</option>");
+            // 使用 Set 排除重複迭代結果
+            var areaSet = new Set();
+            $.each(data["results"], function (index, item) {
+                areaSet.add(item.area);
             })
-            $.each(data[1], function (index, item) {
-                $("#kind").append("<option value='" + item + "'>" + item + "</option>");
-            })
-            $.each(data[2], function (index, item) {
-                $("#sex").append("<option value='" + item + "'>" + item + "</option>");
+
+            // Set 類型不能使用 jQuery 的 each 方法 須使用原生 forEach
+            // ※ Set 若轉換為 Array 後便能使用 jQuery 的 each 方法
+            // ※ var areaArray = Array.from(areaSet);
+            areaSet.forEach(function (area) {
+                let comboBoxContent = `
+                    <option value="${area}">${area}</option>
+                `;
+                $("#area").append(comboBoxContent);
             })
         }
     });
 
     function getAnimalList(data) {
-        $("#test1Result").empty();
+        // 清空元素
+        $("#contentAjax").empty();
+
+        // 加入內容
         $.each(data["results"], function (index, item) {
-            var html = `
-<div class='col-md-6 col-lg-3 ftco-animate'>
-    <div class='published'>
-        <div class='img-wrap d-flex align-items-stretch'>
-            <div class='work mb-4 img d-flex align-items-end' style='background-image: url(${item.imageUrl});'></div>
-        </div>
-        <div class='text pt-3 px-3 pb-4 text-center'>
-            <h3 id='${item.animalId}'>${item.animalName}</h3>
-            <div class='faded'>
-                <p>物種: ${item.animalKind}</p>
-                <p>性別: ${item.animalSex}</p>
-                <p>地區: ${item.area}</p>
-                <p>日期: ${item.lastModifiedDate}</p>
-            </div>
-            <button type='button' onclick='getAnimalInfo(this)' class='btn btn-primary' data-toggle='modal' data-target='#exampleModalCenter'>
-            詳細資料
-            </button>
-        </div>
-    </div>
-</div>`;
-
-
-            $("#test1Result").append(html);
+            var tableContent = `
+                <div class="col-md-6 col-lg-3 ftco-animate">
+                    <div class="published">
+                        <div class="img-wrap d-flex align-items-stretch">
+                            <div class="work mb-4 img d-flex align-items-end" style="background-image: url(${item.imageUrl});"></div>
+                        </div>
+                        <div class="text pt-3 px-3 pb-4 text-center">
+                            <h3 id="${item.animalId}">${item.animalName}</h3>
+                            <div class="faded">
+                                <p>物種: ${item.animalKind}</p>
+                                <p>性別: ${item.animalSex}</p>
+                                <p>地區: ${item.area}</p>
+                                <p>日期: ${item.lastModifiedDate}</p>
+                            </div>
+                            <button type="button" onclick="getAnimalInfo(this)" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+                            詳細資料
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            `;
+            $("#contentAjax").append(tableContent);
         })
 
         pages = Math.ceil(data.total / data.limit);
