--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -147,7 +147,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light" id="ftco-navbar"
      style="background-image: url('/images/_main.png') !important;">
     <div class="container">
-        <a class="navbar-brand" href="/index"><span class="flaticon-pawprint-1 mr-2"></span>寵物資訊平台</a>
+        <a class="navbar-brand" href="/index"><span class="flaticon-pawprint-1 mr-2"></span>浪寵尋家</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fa fa-bars"></span>
