--- a/src/main/resources/templates/forum.html
+++ b/src/main/resources/templates/forum.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="css/jquery.timepicker.css">
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/button.click.js"></script>
     <!--  自訂樣式  -->
     <style>
         /*網站背景紋理*/
@@ -311,6 +310,7 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 <script src="js/google-map.js"></script>
 <script src="js/main.js"></script>
+<script src="js/pageController.js"></script>
 
 <script type="text/javascript">
     $(".headerPage").load("header");//讀取導覽列
@@ -321,6 +321,7 @@
         $.ajax({//取得所有文章
             type: "GET",
             url: "/forumArticles",
+            async: false,
             success: function (data) {
                 getAnimalFoodList(data);
             }
@@ -370,7 +371,7 @@
             // console.log(item.userId)
             var userInfo = getUserInfo(item.userId);//傳入userid，取得使用者資訊
             var messageData = getMessageInfo(item.articleId);//傳入文章id，取得留言資訊
-
+            // console.log(messageData);
             var html = `
                         <tr>
                             <td><div>${item.type}</div></td>
@@ -385,7 +386,7 @@
                                 </div>
                                     </td>
                             <td><div>${userInfo.name}</div></td>
-                            <td><div>${messageData[1]}</div></td>
+                            <td><div>${messageData==null?0:messageData[1]}</div></td>
                             <td><div>${item.likes}/${item.views}</div></td>
                             <td><div>${item.modifiedDate}</div></td>
                         </tr>`;
@@ -465,7 +466,7 @@
                         </div>
                         <div class="row m-0 pr-4 font-weight-bold justify-content-end">
                         <span>${articleData.modifiedDate}</span>
-                        <span>&nbsp;編輯日期</span>
+                        <span>&nbsp;更新日期</span>
                         </div>
                         <div id="loginButton" class="row m-0 pr-4 font-weight-bold justify-content-end">
 
@@ -493,10 +494,8 @@
                         </div>
                             <!--編輯、刪除發文者才能使用-->
                         </div>
-                        <div class="modal-footer justify-content-center">
+                        <div id="chatBlock" class="m-auto col-12 justify-content-center">
                             <!--留言-->
-                        </div>
-                        <div id="chatBlock">
                         </div>
                         <input id="message" articleId="${articleData.articleId}" type="text"  ><button onclick="message()">留言</button>`;
                 //編輯、保存、取消、刪除按紐
@@ -536,23 +535,29 @@
 
                 var messageData = getMessageInfo(articleData.articleId);//傳入文章id，取得留言資訊
                 // console.log(messageData);
-                $.each(messageData[0], function (index, item) {
+                if (messageData!=null) {
+                    $.each(messageData[0], function (index, item) {
 
-                    // console.log(item.userId);
+                        // console.log(item.userId);
 
-                    var userData = getUserInfo(item.userId);
-                    // console.log(userData.name);
+                        var userData = getUserInfo(item.userId);
+                        // console.log(userData.name);
 
-                    messageHtml = `
-                                    <div>${userData.name} : ${item.content}</div>
+                        messageHtml = `
+                                    <div style="border-style: dashed double none;">
+                                        <div>${userData.name} 說 : ${item.content}</div>
+                                        <!--如果發文日期 不等於 修改日期 顯示已編輯-->
+                                        <div>${item.postDate == item.modifiedDate?item.postDate:item.modifiedDate+" 已編輯"}</div>
+
+                                    </div>
                                     `;
-                    // console.log(messageHtml);
-                    $("#chatBlock").append(messageHtml);
+                        // console.log(messageHtml);
+                        $("#chatBlock").append(messageHtml);
+                    })
+                }
 
-                })
 
-                // console.log(messageHtml);
-                $("#chatBlock").append(messageHtml);
+
 
 
             }
@@ -584,62 +589,6 @@
         });
         return rsData;
     }
-
-
-    //輸出頁碼
-    function pageSet(pages) {
-        var pageHtml = '';
-        var start, end;
-        if (listPage < 6) {
-            start = 1;
-        } else {
-            start = listPage - 5;
-        }
-        if (listPage > pages - 5) {
-            end = pages;
-        } else {
-            end = listPage + 5;
-        }
-
-        if (listPage > 1) {
-            pageHtml += '<span>上一頁</span>';
-        }
-        for (var i = start, page_cur = ''; i <= end; i++) {
-            if (listPage == i) {
-                page_cur = 'page_cur';
-            } else {
-                page_cur = '';
-            }
-            pageHtml += '<span class="' + page_cur + '">' + i + '</span>';
-        }
-        if (listPage < pages) {
-            pageHtml += '<span>下一頁</span>';
-        }
-        $('.page_show').empty().append(pageHtml);
-    }
-
-
-    $('body').on('click', '.page_show span', function () {//點擊頁數執行
-        var $this = $(this);
-        if ($this.hasClass('page_cur')) {
-            return;
-        }
-        var page = $this.html();
-        if (page == '上一頁') {
-            listPage = listPage - 1;
-            changePage(listPage);
-            // goPrePage();
-        } else if (page == '下一頁') {
-            listPage = listPage + 1;
-            changePage(listPage);
-            // goNextPage();
-        } else {
-            listPage = parseInt(page);
-            changePage(listPage);
-        }
-        //根據頁碼獲取當前頁列表數據
-        pageSet(pages);
-    });
 
     $("#search").click(function () {//搜尋按鈕被按下
         listPage = 1;
