--- a/src/main/resources/templates/missing.html
+++ b/src/main/resources/templates/missing.html
@@ -118,15 +118,22 @@
         <!-- 顯示搜尋條件 -->
         <div class="row p-3 m-auto ftco-animate text-center justify-content-center" id="top">
             <div class="p-1">
-                <select class="custom-select" name="missingArea" id="missingArea">
+                <select class="custom-select" id="area">
+                    <option value="default">不限地區</option>
                 </select>
             </div>
             <div class="p-1">
-                <select class="custom-select" name="kind" id="kind">
+                <select class="custom-select" id="kind">
+                    <option value="default">不限種類</option>
+                    <option value="狗">狗</option>
+                    <option value="貓">貓</option>
                 </select>
             </div>
             <div class="p-1">
-                <select class="custom-select" name="sex" id="sex">
+                <select class="custom-select" id="sex">
+                    <option value="default">不限性別</option>
+                    <option value="公">公</option>
+                    <option value="母">母</option>
                 </select>
             </div>
             <div class="p-1">
@@ -141,7 +148,7 @@
                 </div>
             </div>
         </div>
-        <!-- 顯示查詢資訊 -->
+        <!-- 顯示資料筆數及頁碼 -->
         <div class="row ftco-animate">
             <div class="col-12 p-3 text-center">
                 <div class="block-27">
@@ -163,17 +170,20 @@
              aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
                 <div class="modal-content main-img">
+                    <!-- 寵物名字放在標題 -->
                     <div class="modal-header">
-                        <!-- 名字放在標題 -->
+                        <!-- 標題定位用左區塊 -->
                         <div class="col-4 px-0">
                         </div>
+                        <!-- 標題定位用主區塊 -->
                         <div class="col-4 px-0 d-flex justify-content-center">
                             <span class="fa-icon"><i class="fa fa-paw fa-2x"></i></span>
-                            <h3 class="modal-title font-weight-bold" id="animalName_static"></h3>
+                            <h3 class="modal-title font-weight-bold" id="animalName_static">這裡是寵物名字</h3>
                             <span class="fa-icon"><i class="fa fa-paw fa-2x"></i></span>
                         </div>
+                        <!-- 標題定位用右區塊 -->
                         <div class="col-4 px-0">
-                            <div class="row m-0 pr-4 font-weight-bold justify-content-end" style="color: ">
+                            <div class="row m-0 pr-4 font-weight-bold justify-content-end">
                                 <span id="createdDate_static"></span>
                                 <span>&nbsp;刊登</span>
                             </div>
@@ -181,16 +191,19 @@
                                 <span id="lastModifiedDate_static"></span>
                                 <span>&nbsp;更新</span>
                             </div>
+                            <!-- 強制定位關閉功能於最右上角 -->
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"
                                     style="position: absolute !important; top: 0; right: 0; padding: 10px !important;">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
                     </div>
+                    <!-- 設定上下邊線效果 區隔 header 和 footer -->
                     <div class="modal-body"
                          style="border-top: 3px dotted grey; border-bottom: 3px dotted grey;">
                         <div class="row m-auto col-12 justify-content-center">
                             <div class="col-xl-6 col-12">
+                                <!-- 彈出框圖片高度於小畫面顯示異常 強制設定600px高 -->
                                 <div id="imageUrl_static" class="work mb-4 img d-flex align-items-end"
                                      style="height: 600px !important; background-position: center center !important;">
                                 </div>
@@ -207,64 +220,47 @@
                                     </div>
                                     <div class="d-block">
                                         <span>物種 :</span>
-                                        <span id="animalKind_static"></span>
+                                        <span id="kind_static"></span>
                                     </div>
                                     <div class="d-block">
                                         <span>品種 :</span>
-                                        <span id="animalVariety_static"></span>
+                                        <span id="variety_static"></span>
                                     </div>
                                 </div>
                                 <div class="col-4 mt-0">
                                     <div class="d-block">
                                         <span>性別 :</span>
-                                        <span id="animalSex_static"></span>
+                                        <span id="sex_static"></span>
                                     </div>
                                     <div class="d-block">
                                         <span>年齡 :</span>
-                                        <span id="animalAge_static"></span>
+                                        <span id="age_static"></span>
                                     </div>
                                     <div class="d-block">
                                         <span>體型 :</span>
-                                        <span id="animalBodysize_static"></span>
+                                        <span id="bodysize_static"></span>
                                     </div>
                                     <div class="d-block">
                                         <span>毛色 :</span>
-                                        <span id="animalColor_static"></span>
+                                        <span id="color_static"></span>
                                     </div>
                                 </div>
                                 <div class="col-4 mt-0">
                                     <div class="d-block">
-                                        <span>絕育 :</span>
-                                        <span id="animalSterilization_static"></span>
-                                    </div>
-                                    <div class="d-block">
-                                        <span>疫苗 :</span>
-                                        <span id="animalBacterin_static"></span>
-                                    </div>
-                                    <div class="d-block">
                                         <span>地區 :</span>
                                         <span id="area_static"></span>
                                     </div>
-                                    <div class="d-block">
-                                        <span>空</span>
-                                        <span id=""></span>
+                                    <!-- 這是一個保留欄位 -->
+                                    <div class="d-block" style="visibility: hidden;">
+                                        <span>dummy</span>
+                                        <span id="">dummy</span>
                                     </div>
                                 </div>
-                                <!-- 備註(動物描述) -->
+                                <!-- 備註(寵物描述) -->
                                 <div class="col-12 pt-3">
                                     <div class="d-block font-weight-bold" style="color: black;">
                                         <span id="description_static"></span>
                                     </div>
-                                </div>
-                                <div class="col-12 d-block text-right">
-                                    <!--                                    <div class="px-1">-->
-                                    <!--                                        <span>刊登日期 :</span>-->
-                                    <!--                                        <span id="createdDate_static"></span>-->
-                                    <!--                                    </div>-->
-                                    <!--                                    <div class="px-1">-->
-                                    <!--                                        <span>更新日期 :</span>-->
-                                    <!--                                        <span id="lastModifiedDate_static"></span>-->
-                                    <!--                                    </div>-->
                                 </div>
                             </div>
                         </div>
@@ -334,54 +330,56 @@
         }
     });
 
-    $.ajax({//載入下拉選單
+    // 載入篩選區下拉選單
+    $.ajax({
         type: "GET",
-        url: "/getAnimalsMissingComboBox",
+        url: "/animalsMissing?limit=1000",
         success: function (data) {
-            console.log(data);
-            console.log(data[0]);
-            console.log(data[1]);
-
-            $("#area").append("<option value='不限地區'>不限地區</option>");
-            $("#kind").append("<option value='不限種類'>不限種類</option>");
-            $("#sex").append("<option value='不限性別'>不限性別</option>");
-
-            $.each(data[0], function (index, item) {
-                $("#area").append("<option value='" + item + "'>" + item + "</option>");
+            // 使用 Set 排除重複迭代結果
+            var areaSet = new Set();
+            $.each(data["results"], function (index, item) {
+                areaSet.add(item.area);
             })
-            $.each(data[1], function (index, item) {
-                $("#kind").append("<option value='" + item + "'>" + item + "</option>");
-            })
-            $.each(data[2], function (index, item) {
-                $("#sex").append("<option value='" + item + "'>" + item + "</option>");
+
+            // Set 類型不能使用 jQuery 的 each 方法 須使用原生 forEach
+            // ※ Set 若轉換為 Array 後便能使用 jQuery 的 each 方法
+            // ※ var areaArray = Array.from(areaSet);
+            areaSet.forEach(function (area) {
+                let comboBoxContent = `
+                    <option value="${area}">${area}</option>
+                `;
+                $("#area").append(comboBoxContent);
             })
         }
     });
-    function getAnimalMissingList(data) {
-        $("#test1Result").empty();
-        $.each(data["results"], function (index, item) {
-            var html = `
-<div class='col-md-6 col-lg-3 ftco-animate'>
-    <div class='staff'>
-        <div class='img-wrap d-flex align-items-stretch'>
-            <div class='work mb-4 img d-flex align-items-end' style='background-image: url(${item.imageUrl});'></div>
-        </div>
-        <div class='text pt-3 px-3 pb-4 text-center'>
-            <h3 id='${item.animalId}'>${item.name}</h3>
-            <div class='faded'>
-                <p>物種: ${item.kind}</p>
-                <p>性別: ${item.sex}</p>
-                <p>地區: ${item.missingArea}</p>
-                <p>日期: ${item.missingDate}</p>
-            </div>
-            <button type='button' onclick='getAnimalMissingInfo(this)' class='btn btn-primary' data-toggle='modal' data-target='#exampleModalCenter'>
-            詳細資料
-            </button>
-        </div>
-    </div>
-</div>`;
 
-            $("#test1Result").append(html);
+    function getAnimalMissingList(data) {
+        // 清空元素
+        $("#contentAjax").empty();
+
+        $.each(data["results"], function (index, item) {
+            var tableContent = `
+                <div class="col-md-6 col-lg-3 ftco-animate">
+                    <div class="published">
+                        <div class="img-wrap d-flex align-items-stretch">
+                            <div class="work mb-4 img d-flex align-items-end" style="background-image: url(${item.imageUrl});"></div>
+                        </div>
+                        <div class="text pt-3 px-3 pb-4 text-center">
+                            <h3 id="${item.animalId}">${item.name}</h3>
+                            <div class="faded">
+                                <p>物種: ${item.kind}</p>
+                                <p>性別: ${item.sex}</p>
+                                <p>地區: ${item.area}</p>
+                                <p>日期: ${item.missingDate}</p>
+                            </div>
+                            <button type="button" onclick="getAnimalMissingInfo(this)" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+                            詳細資料
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            `;
+            $("#contentAjax").append(tableContent);
         })
 
         pages = Math.ceil(data.total / data.limit);
@@ -424,8 +422,7 @@
                 $("#age_static").text(data.age);
                 $("#description_static").text(data.description);
                 $("#imageUrl_static").css("background-image", `url('${data.imageUrl}')`);
-                $("#missingArea_static").text(data.missingArea);
-
+                $("#area_static").text(data.area);
                 $("#createdDate_static").text(data.createdDate);
                 $("#missingDate_static").text(data.missingDate);
 
@@ -495,37 +492,30 @@
     var listPage = 1;
 
     function changePage(page) {
+        var queryParams = "";
         var offset = limit * (page - 1);
-        console.log("offset" + offset);
-        console.log("page" + page);
-
         var area = $("#area").val();
         var kind = $("#kind").val();
         var sex = $("#sex").val();
-        var searchUrl = "";
 
-        console.log(area);
-        console.log(kind);
-        console.log(sex);
+        queryParams += "&offset=" + offset;
 
-        if (area != "不限地區") {
-            searchUrl += "&area=" + area;
+        // 取得篩選區的參數
+        if (area != "default") {
+            queryParams += "&area=" + area;
         }
-        if (kind != "不限種類") {
-            searchUrl += "&kind=" + kind;
+        if (kind != "default") {
+            queryParams += "&kind=" + kind;
         }
-
-        if (sex != "不限性別") {
-            searchUrl += "&sex=" + sex;
+        if (sex != "default") {
+            queryParams += "&sex=" + sex;
         }
-        var url = "/animalsMissing?offset=" + limit * (page - 1) + searchUrl;
-
 
         $.ajax({
             type: "GET",
-            url: url,
+            url: "/animalsMissing?" + queryParams,
             success: function (data) {
-                getAnimalMissingList(data);
+                getAnimalList(data);
             }
         })
     }
